# CallOfTheVoid

./: CMakeLists.txt
include/: AnimatedGameObject.hpp  Animation.hpp  Animator.hpp  AssetsManager.hpp  Camera.hpp  Collision.hpp  Common.hpp  Component.hpp  Cube.hpp  DebugEditor.hpp  DebugLine.hpp  DefaultScene.hpp  DeleteAction.hpp  DoorScript.hpp  Engine.hpp  Filesystem.hpp  GameObject.hpp  Grid.hpp  Interpolation.hpp  Keyboard.hpp  Light.hpp  LightComponent.hpp  LightManager.hpp  LoadingScene.hpp  MainWindow.hpp  Material.hpp  Mesh.hpp  Model.hpp  Mouse.hpp  Physics.hpp  Player.hpp  PositionAction.hpp  Raycasting.hpp  Renderer.hpp  RigidbodyComponent.hpp  Scene.hpp  SceneManager.hpp  ScriptComponent.hpp  ScriptsRegister.hpp  Shader.hpp  (+15 more)
libraries/glad/: glad.h
resources/maps/: default_scene.json  test_scene.json  void.fbx
resources/materials/: Ch36_Body.mat  DefaultMaterial.mat  JailDoor_MTL.mat  Mat.mat  Material.001.mat  VendingGlass_01.mat  VendingMachine_01.mat  concrete.mat  default_material.mat  floor_material.mat  makarov_attachments_material.mat  makarov_material.mat  parking_wall_material.mat
resources/models/: Mannequin.fbx  void.fbx  void.mtl
resources/shaders/: cube.frag  cube.vert  skelet.vert  skeleton.frag  skeleton.vert
src/: AnimatedGameObject.cpp  Animation.cpp  Animator.cpp  AssetsManager.cpp  Bone.cpp  Camera.cpp  Collision.cpp  Cube.cpp  DebugEditor.cpp  DebugLine.cpp  DebugTextHolder.cpp  DefaultScene.cpp  DeleteAction.cpp  DoorScript.cpp  Engine.cpp  GameObject.cpp  Grid.cpp  Keyboard.cpp  LightComponent.cpp  LightManager.cpp  LoadingScene.cpp  MainWindow.cpp  Material.cpp  Mesh.cpp  Model.cpp  Mouse.cpp  Physics.cpp  Player.cpp  Raycasting.cpp  Renderer.cpp  RigidbodyComponent.cpp  Scene.cpp  SceneManager.cpp  ScriptComponent.cpp  ScriptsRegister.cpp  Shader.cpp  ShaderManager.cpp  ShadowHandler.cpp  SkeletalMesh.cpp  Skeleton.cpp  (+12 more)
